Cleanup: keep standalone local HTML calculator only

--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
 <body data-theme="white">
   <main class="container">
     <header class="hero">
-      <img src="../attached_assets/NEW LOGO SMALL.png" alt="SAD Pay Calculator Logo" class="logo" />
+      <img src="./assets/logo.png" alt="SAD Pay Calculator Logo" class="logo" />
       <h1>SAD Pay Calculator</h1>
       <div class="theme-wrap">
         <label for="theme_mode">Theme Mode</label>
